test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compare_explicit_and_implict_addr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(10)
  ]
  ;
  return
  identifier(arr)
  ==
  &
  identifier(arr)
  ;
  }
